--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Welcome to My Portfolio</h1>
-    <p>This is the page for my final project in "Introduction to Python for Global Affairs."</p>
+    <p>This is the page for my final project in Yale's "Introduction to Python for Global Affairs", as well as other homework assignments and projects I completed during the course.</p>
     <p>Link to my project repository: <a href="https://github.com/oliverwolyniec/oliverwolyniec.github.io">Project Repository</a></p>
   </body>
 </html>
