--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>Oliver Wolyniec's Portfolio</title>
   </head>
   <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is the page for my final project in Yale's "Introduction to Python for Global Affairs", as well as other homework assignments and projects I completed during the course.</p>
+    <h1>Welcome to Oliver Wolyniec's Portfolio</h1>
+    <p>This is the page for my final project in Yale's "Introduction to Python for Global Affairs", in which I investigated hate narratives propagated by Ilham Aliyev and Nikol Pashinyan, the leaders of Azerbaijan and Armenia, respectively, in the context of the Nagorno-Karabakh conflict from 2020 to 2023.</p>
     <p>Link to my project repository: <a href="https://github.com/oliverwolyniec/oliverwolyniec.github.io">Project Repository</a></p>
   </body>
 </html>
