--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
   <head>
     <title>Oliver Wolyniec's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Welcome to Oliver Wolyniec's Portfolio</h1>
-    <p>This is the page for my final project in Yale's "Introduction to Python for Global Affairs", in which I investigated hate narratives propagated by Ilham Aliyev and Nikol Pashinyan, the leaders of Azerbaijan and Armenia, respectively, in the context of the Nagorno-Karabakh conflict from 2020 to 2023.</p>
-    <p>Link to my project repository: <a href="https://github.com/oliverwolyniec/oliverwolyniec.github.io">Project Repository</a></p>
+    <div class="container">
+      <h1>Welcome to Oliver Wolyniec's Portfolio</h1>
+      <p>This is the page for my final project in Yale's "Introduction to Python for Global Affairs", in which I investigated hate narratives propagated by Ilham Aliyev and Nikol Pashinyan, the leaders of Azerbaijan and Armenia, respectively, in the context of the Nagorno-Karabakh conflict from 2020 to 2023.</p>
+      <p>Link to my project repository: <a href="https://github.com/yourusername/yourfinalprojectrepo">Project Repository</a></p>
+    </div>
   </body>
 </html>
