--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <!-- Cover Photo Section -->
+    <!-- Cover Photo Section with Caption -->
     <div class="cover-photo">
-      <img src="lachin.jpg" alt="Cover Photo" class="cover-img">
+      <img src="coverphoto.jpg" alt="Cover Photo" class="cover-img">
+      <div class="caption">In between Armenia and Azerbaijan. -Russ Juskalian</div>
     </div>
 
     <!-- Main Content -->
