--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <!-- Cover Photo Section -->
+    <!-- Cover Photo Section with Text -->
     <div class="cover-photo">
       <img src="lachin.jpg" alt="Cover Photo" class="cover-img">
+      <div class="text-overlay">
+        <h1>Welcome to Oliver Wolyniec's Portfolio</h1>
+        <p>This is the page for my final project in Yale's "Introduction to Python for Global Affairs", in which I investigated hate narratives propagated by Ilham Aliyev and Nikol Pashinyan, the leaders of Azerbaijan and Armenia, respectively, in the context of the Nagorno-Karabakh conflict from 2020 to 2023.</p>
+        <p>Link to my project repository: <a href="https://github.com/yourusername/yourfinalprojectrepo">Project Repository</a></p>
+      </div>
     </div>
 
     <!-- Main Content -->
     <div class="container">
-      <h1>Welcome to Oliver Wolyniec's Portfolio</h1>
-      <p>This is the page for my final project in Yale's "Introduction to Python for Global Affairs", in which I investigated hate narratives propagated by Ilham Aliyev and Nikol Pashinyan, the leaders of Azerbaijan and Armenia, respectively, in the context of the Nagorno-Karabakh conflict from 2020 to 2023.</p>
-      <p>Link to my project repository: <a href="https://github.com/yourusername/yourfinalprojectrepo">Project Repository</a></p>
+      <!-- More content here -->
     </div>
   </body>
 </html>
